added photo saving

--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -3,6 +3,7 @@
         <script>
             var status_url = "{% url 'fqueryApp:save_statuses' %}";
             var link_url = "{% url 'fqueryApp:save_links' %}";
+            var photo_url = "{% url 'fqueryApp:save_photos' %}";
         </script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"> </script>
         {% load static %}
