--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <script>
-            var status_url = "{% url 'fqueryApp:save_statuses' %}";
-            var link_url = "{% url 'fqueryApp:save_links' %}";
-            var photo_url = "{% url 'fqueryApp:save_photos' %}";
+            var save_status_url = "{% url 'fqueryApp:save_statuses' %}";
+            var save_link_url = "{% url 'fqueryApp:save_links' %}";
+            var save_photo_url = "{% url 'fqueryApp:save_photos' %}";
         </script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"> </script>
         {% load static %}
