--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -5,6 +5,7 @@
             var save_link_url = "{% url 'fqueryApp:save_links' %}";
             var save_photo_url = "{% url 'fqueryApp:save_photos' %}";
             var save_post_url = "{% url 'fqueryApp:save_posts' %}";
+            var save_note_url = "{% url 'fqueryApp:save_notes' %}";
 
         </script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"> </script>
