Added photo search

--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -55,12 +55,12 @@
             <input type="text" name="keyword" id="txtKeyword" onkeypress="return runmakeQuery(event)">
             <button type="button" OnClick="makeQuery()">GO</button><br>
             <label>within</label><br>
-            <input type="checkbox" name="content_type_box" checked=yes, value=1>statuses<br>
-            <input type="checkbox" name="content_type_box" checked=yes, value=2>posts<br>
+            <input type="checkbox" name="content_type_box" value=1>statuses<br>
+            <input type="checkbox" name="content_type_box" value=2>posts<br>
             <input type="checkbox" name="content_type_box" value=4>comments<br>
             <input type="checkbox" name="content_type_box" value=8>links<br>
-<!--        <input type="checkbox" name="content_type_box" value=16>photos<br>
-            <input type="checkbox" name="content_type_box" value=32>notes<br>
+            <input type="checkbox" name="content_type_box" checked=yes, value=16>photos<br>
+<!--             <input type="checkbox" name="content_type_box" value=32>notes<br>
             <input type="checkbox" name="content_type_box" value=64>videos<br> -->
 
         </div>
