fixed post and other  saving stuff

--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -151,11 +151,11 @@
                 console.log('ID: ', response.id);
               })
               // get_friend_list();
-              get_statuses();
-              get_pictures();
-              get_links();
+              // get_statuses();
+              // get_pictures();
+              // get_links();
               get_posts();
-              get_notes();
+              // get_notes();
 
           }
         </script>
