--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -25,7 +25,7 @@
         <script src="{% static 'js/post.js' %}"> </script>
         <script src="{% static 'js/note.js' %}"> </script>
 
-        <link rel="stylesheet" type="text/css" href="{% static 'js/normalize.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'js/homestyle.css' %}">
         
         <title>
             Welcome to fQuery HOME page!    
@@ -58,18 +58,20 @@
         <div id = "photo_list_div"></div>
         <div id = "link_list_div"></div>
 
-        <div>
-            <label>Search</label>
+        <div> 
+            <label id = "search">Search
             <input type="text" name="keyword" id="txtKeyword" onkeypress="return runmakeQuery(event)">
-            <button type="button" OnClick="makeQuery()">GO</button><br>
+            <button type="button" OnClick="makeQuery()">GO</button></label>
             <label>within</label><br>
-            <input type="checkbox" name="content_type_box" value=1>statuses<br>
-            <input type="checkbox" name="content_type_box" value=2>posts<br>
-            <input type="checkbox" name="content_type_box" value=4>comments<br>
-            <input type="checkbox" name="content_type_box" value=8>links<br>
-            <input type="checkbox" name="content_type_box" checked=yes, value=16>photos<br>
-<!--             <input type="checkbox" name="content_type_box" value=32>notes<br>
-            <input type="checkbox" name="content_type_box" value=64>videos<br> -->
+        </div>
+        <div>
+            <label><input type="checkbox" name="content_type_box" value=1>statuses</label><br>
+            <label><input type="checkbox" name="content_type_box" value=2>posts</label><br>
+            <label><input type="checkbox" name="content_type_box" value=4>comments</label><br>
+            <label><input type="checkbox" name="content_type_box" value=8>links</label><br>
+            <label><input type="checkbox" name="content_type_box" checked=yes, value=16>photos</label><br>
+<!--             <label><input type="checkbox" name="content_type_box" value=32>notes</label><br>
+            <label><input type="checkbox" name="content_type_box" value=64>videos</label><br> -->
 
         </div>
 
