Moved css files to appropriate directory

--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -25,7 +25,7 @@
         <script src="{% static 'js/post.js' %}"> </script>
         <script src="{% static 'js/note.js' %}"> </script>
 
-        <link rel="stylesheet" type="text/css" href="{% static 'js/homestyle.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/homestyle.css' %}">
         
         <title>
             Welcome to fQuery HOME page!    
