--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -30,13 +30,18 @@
         <title>
             Welcome to fQuery HOME page!    
         </title>
-        Welcome to fQuery HOME page!
     </head>
     <body>
 
-        <div id="fb-root"></div>
-        <div>
-          <fb:login-button
+        <h1>
+            Welcome to fQuery    
+        </h1>
+
+        <h2>
+            Search your previous statuses, posts, comments, links, photos on your and your friends' timeline
+        </h2>
+        <fb:login-button
+            id = "fblogin"
             show-faces="false"
             width="200"
             max-rows="1"
@@ -45,7 +50,10 @@
                     user_photos, read_stream, 
                     user_notes, friends_status,
                     friends_notes, friends_photos">
-          </fb:login-button>
+        </fb:login-button>
+        <div id="fb-root"></div>
+        <div>
+          
         </div>
 
 
