modified display content

--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -79,7 +79,7 @@
             
             <div id= "content">
                 <div id = "content_left">
-                    <label>select friends</label>
+                    <label>friends you want to search about (you can select multiple)</label>
                     <form action="form_action.asp">
                     <select id="select_friends" name="cars" multiple size=30>
                     </select>
