--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -108,7 +108,7 @@
                             <label><input id="post_checkbox" type="checkbox" name="content_type_box" value=2>posts</label><br>
                             <label><input id="comment_checkbox" type="checkbox" name="content_type_box" value=4>comments</label><br>
                             <label><input id="link_checkbox" type="checkbox" name="content_type_box" value=8>links</label><br>
-                            <label><input id="photo_checkbox" type="checkbox" name="content_type_box" checked=yes, value=16>photos</label><br>
+                            <label><input id="photo_checkbox" type="checkbox" name="content_type_box" value=16>photos</label><br>
                             <button type="button" OnClick="select_all()">
                                 Everything
                             </button>
