--- a/fqueryApp/static/css/homestyle.css
+++ b/fqueryApp/static/css/homestyle.css
@@ -33,10 +33,39 @@ h2 {
   padding:6px 12px;
 }
 
+#loading{
+  width: 250px;
+  margin-left: 100px;
+  text-align: left;
+}
+
+
+#progressbar-outer {
+  margin-left: 30px;
+  text-align: center;
+  width: 425px;
+  height: 20px;
+  text-align: center;
+  background-color: black;
+  border-radius: 17px; /* (height of inner div) / 2 + padding */
+  padding: 7px;
+  
+}
+
+#progressbar-inner {
+  text-align: center;
+   background-color: #4EB1BA;
+   vertical-align: center;
+   width: 0%; /* Adjust with JavaScript */
+   height: 100%;
+   border-radius: 13px;
+}
+
 #fblogin{
-  margin-left: 1000px;
+  margin-left: 150px;
   width: 450px;
 }
+
 
 #header{
   text-align: center;
