sort friend list by name

--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -111,7 +111,7 @@
                         <td>
                         <div id = "content_left">
                             <label>friends you want to search about</label> 
-                            <label>(you can select multiple)</label>
+                            <label>(you can select multiple by pressing control or command)</label>
                             <form action="form_action.asp">
                             <select id="select_friends" name="cars" multiple size=30>
                             </select>
