fixed code to make query only sent after data is retrieved

--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -110,10 +110,9 @@
                     <tr>
                         <td>
                         <div id = "content_left">
-                            <label>friends you want to search about</label> 
-                            <label>(you can select multiple by pressing control or command)</label>
+                            <label>select one friend you want to search about</label> 
                             <form action="form_action.asp">
-                            <select id="select_friends" name="cars" multiple size=30>
+                            <select id="select_friends" name="cars" size=30>
                             </select>
                             </form>
                         </div>
