fixed top align

--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -108,7 +108,7 @@
             <div id= "content">
                 <table>
                     <tr>
-                        <td>
+                        <td valign="top">
                         <div id = "content_left">
                             <label>select one friend you want to search about</label> 
                             <form action="form_action.asp">
@@ -118,7 +118,7 @@
                         </div>
                         </td>
 
-                        <td>
+                        <td valign="top">
                         <div id = "content_middle">
                             <label>within</label><br>
                             <label><input id="status_checkbox" type="checkbox" name="content_type_box" value=1>statuses</label><br>
